feat: add controllers, dto and mapper
